--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve ./example/main.js",
-    "build:lib": "vue-cli-service build --target lib --name vue-flat ./src/index.js",
-    "build:wc": "vue-cli-service build --target wc --name vue-flat ./src/index.js",
+    "serve": "vue-cli-service serve ./dev/main.js",
+    "build:lib": "vue-cli-service build --target lib --name vue-flat ./src/main.js",
+    "build:wc": "vue-cli-service build --target wc --name vue-flat ./src/main.js",
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit"
   },
